--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <!-- "Main header" -->
     <h1>Discover hidden places in the world around you</h1>
+    <p>
+      <a class="link">Download Excursion (Coming soon!)</a>
+    </p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+    <!-- Second area -->
+    <h2>Your personal travel guide</h2>
+    <p>
+      Excursion remembers places you like, and recommends new points of interest around you.
+    </p>
+    <p>
+      <img src="resources/images/camp.jpg" alt="Camping">
+    </p>
+    <p>
+      <img src="resources/images/phone.png" alt="Mobile phone">
+    </p>
+    <!-- Third area -->
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
+      <a class="link" href="#">Download Excursion (Coming soon!)</a>
+    </p>
+    <!-- Footer -->
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
   </body>
 </html>
